initial commit for v4-dev

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "startbootstrap-simple-sidebar",
     "title": "Simple Sidebar",
-    "version": "3.3.7",
+    "version": "4.0.0-alpha",
     "homepage": "http://startbootstrap.com/template-overviews/simple-sidebar",
     "author": "Start Bootstrap",
     "license": {
