--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "title": "Simple Sidebar",
     "name": "startbootstrap-simple-sidebar",
-    "version": "4.1.1",
+    "version": "4.1.3",
     "description": "A simple sidbar navigation HTMl template built with Bootstrap",
     "keywords": [
         "css",
@@ -26,11 +26,12 @@
         "url": "https://github.com/BlackrockDigital/startbootstrap-simple-sidebar.git"
     },
     "dependencies": {
-        "bootstrap": "4.1.1",
-        "jquery": "3.3.1"
+        "bootstrap": "^4.1.3",
+        "jquery": "3.3.1",
+        "popper.js": "^1.14.5"
     },
     "devDependencies": {
-        "browser-sync": "2.24.5",
+        "browser-sync": "^2.26.3",
         "gulp": "^3.9.1"
     }
 }
