--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "title": "Simple Sidebar",
     "name": "startbootstrap-simple-sidebar",
-    "version": "4.1.3",
+    "version": "4.3.1",
     "description": "A simple sidbar navigation HTMl template built with Bootstrap",
     "keywords": [
         "css",
@@ -19,19 +19,45 @@
     "license": "MIT",
     "author": "Start Bootstrap",
     "contributors": [
-        "David Miller (http://davidmiller.io/)"
+        "David Miller (http://davidmiller.io/)",
+        "chemikus (https://github.com/chemikus)"
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/BlackrockDigital/startbootstrap-simple-sidebar.git"
+        "url": "https://github.com/chemikus/startbootstrap-simple-sidebar.git"
     },
     "dependencies": {
-        "bootstrap": "^4.1.3",
-        "jquery": "3.3.1",
-        "popper.js": "^1.14.5"
+        "bootstrap": "^4.3.1",
+        "jquery": "^3.4.1",
+        "node-sass": "^4.12.0",
+        "popper.js": "^1.14.5",
+        "autoprefixer": "^9.6.1",
+        "clean-css-cli": "^4.3.0",
+        "postcss-cli": "^6.1.3"
     },
     "devDependencies": {
-        "browser-sync": "^2.26.3",
-        "gulp": "^3.9.1"
+        "browser-sync": "^2.26.7",
+        "gulp": "^4.0.2"
+    },
+    "browserslist": [
+        "last 1 major version",
+        ">= 1%",
+        "Chrome >= 45",
+        "Firefox >= 38",
+        "Edge >= 12",
+        "Explorer >= 10",
+        "iOS >= 9",
+        "Safari >= 9",
+        "Android >= 4.4",
+        "Opera >= 30"
+    ],
+    "scripts": {
+        "css:compile": "node-sass --output-style expanded --source-map true --source-map-contents true --precision 6 scss/build.scss dist/simple-sidebar.css",
+        "css:prefix": "postcss --config js/postcss.config.js --replace \"dist/*.css\" \"!dist/*.min.css\"",
+        "css:minify": "cleancss --level 1 --source-map --source-map-inline-sources --output dist/simple-sidebar.min.css dist/simple-sidebar.css",
+        "js:move:bootstrap": "copy .\\node_modules\\bootstrap\\dist\\js\\* .\\vendor\\bootstrap\\js\\",
+        "js:move:jquery": "copy .\\node_modules\\jquery\\dist\\* .\\vendor\\jquery\\",
+        "css:move:bootstrap": "copy .\\node_modules\\bootstrap\\dist\\css\\* .\\vendor\\bootstrap\\css\\",
+        "full": "npm install && npm update && npm run css:compile && npm run css:prefix && npm run css:minify && npm run css:move:bootstrap && npm run js:move:bootstrap && npm run js:move:jquery"
     }
 }
