Bootstrap 4.5.3 and dependencies update

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "title": "Simple Sidebar",
     "name": "startbootstrap-simple-sidebar",
-    "version": "5.1.2",
+    "version": "5.1.3",
     "scripts": {
         "start": "node_modules/.bin/gulp watch"
     },
@@ -14,7 +14,7 @@
         "theme",
         "template"
     ],
-    "homepage": "https://startbootstrap.com/templates/simple-sidebar",
+    "homepage": "https://startbootstrap.com/template/simple-sidebar",
     "bugs": {
         "url": "https://github.com/StartBootstrap/startbootstrap-simple-sidebar/issues",
         "email": "feedback@startbootstrap.com"
@@ -22,19 +22,19 @@
     "license": "MIT",
     "author": "Start Bootstrap",
     "contributors": [
-        "David Miller (http://davidmiller.io/)"
+        "David Miller (https://davidmiller.io/)"
     ],
     "repository": {
         "type": "git",
         "url": "https://github.com/StartBootstrap/startbootstrap-simple-sidebar.git"
     },
     "dependencies": {
-        "bootstrap": "4.5.0",
+        "bootstrap": "4.5.3",
         "jquery": "3.5.1"
     },
     "devDependencies": {
-        "browser-sync": "2.26.7",
-        "del": "5.1.0",
+        "browser-sync": "2.26.13",
+        "del": "6.0.0",
         "gulp": "4.0.2",
         "merge-stream": "2.0.0"
     }
