--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
     "title": "Simple Sidebar",
     "name": "startbootstrap-simple-sidebar",
-    "version": "5.1.3",
+    "version": "5.2.0",
     "scripts": {
-        "start": "node_modules/.bin/gulp watch"
+        "build": "npm run clean && npm run build:pug && npm run build:scss && npm run build:scripts && npm run build:assets",
+        "build:assets": "node scripts/build-assets.js",
+        "build:pug": "node scripts/build-pug.js",
+        "build:scripts": "node scripts/build-scripts.js",
+        "build:scss": "node scripts/build-scss.js",
+        "clean": "node scripts/clean.js",
+        "start": "npm run build && node scripts/start.js",
+        "start:debug": "npm run build && node scripts/start-debug.js"
     },
     "description": "A simple sidebar navigation HTMl template built with Bootstrap",
     "keywords": [
@@ -29,13 +36,18 @@
         "url": "https://github.com/StartBootstrap/startbootstrap-simple-sidebar.git"
     },
     "dependencies": {
-        "bootstrap": "4.5.3",
-        "jquery": "3.5.1"
+        "bootstrap": "4.6.0"
     },
     "devDependencies": {
-        "browser-sync": "2.26.13",
-        "del": "6.0.0",
-        "gulp": "4.0.2",
-        "merge-stream": "2.0.0"
+        "autoprefixer": "10.2.5",
+        "browser-sync": "2.26.14",
+        "chokidar": "3.5.1",
+        "concurrently": "6.0.2",
+        "postcss": "8.2.13",
+        "prettier": "2.2.1",
+        "pug": "3.0.2",
+        "sass": "1.32.11",
+        "shelljs": "0.8.4",
+        "upath": "2.0.1"
     }
 }
